tests/negative/typecheck/cyclic.orng
let const A = (x: B, y: Int)
let const B = (x: A, y: Int)

fn main() -> Int {
    2
}